src/main/docker/k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fr.correctexam.service: front
  name: front
  namespace: correctexam
spec:
  replicas: 1
  selector:
    matchLabels:
      fr.correctexam.service: front
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        fr.correctexam.service: front
    spec:
      containers:
        - image: localhost:32000/barais/correctexam-front
          name: front
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
