src/main/docker/k8s/maildev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: maildev
  name: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: maildev
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: maildev
    spec:
      containers:
        - args:
            - bin/maildev
            - --base-pathname
            - /maildev
            - -w
            - "1080"
            - -s
            - "1025"
          image: maildev/maildev
          name: maildev
          ports:
            - containerPort: 1080
            - containerPort: 25
          resources: {}
      restartPolicy: Always
status: {}
