src/main/docker/k8s/myadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fr.correctexam.service: myadmin
  name: myadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      fr.correctexam.service: myadmin
  strategy: {}
  template:
    metadata:
      labels:
        fr.correctexam.service: myadmin
    spec:
      containers:
        - env:
            - name: PMA_HOST
              value: correctexam-mysql
          image: phpmyadmin
          name: myadmin
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
