src/main/docker/k8s/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: back
  name: back
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: back
status:
  loadBalancer: {}
