src/main/docker/k8s/correctexam-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.correctexam.service: correctexam-mysql
  name: correctexam-mysql
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    fr.correctexam.service: correctexam-mysql
status:
  loadBalancer: {}
