src/main/docker/k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.correctexam.service: front
  name: front
  namespace: correctexam
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    fr.correctexam.service: front
status:
  loadBalancer: {}
