src/main/docker/k8s/maildev-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: maildev
  name: maildev
spec:
  ports:
    - name: "1080"
      port: 1080
      targetPort: 1080
    - name: "25"
      port: 25
      targetPort: 25
  selector:
    io.kompose.service: maildev
status:
  loadBalancer: {}
