src/main/docker/k8s/minio-dev.yaml

# Deploys a new MinIO Pod into the metadata.namespace Kubernetes namespace
#
# The `spec.containers[0].args` contains the command run on the pod
# The `/data` directory corresponds to the `spec.containers[0].volumeMounts[0].mountPath`
# That mount path corresponds to a Kubernetes HostPath which binds `/data` to a local drive or volume on the worker node where the pod runs
#
apiVersion: v1
kind: Pod
metadata:
  labels:
    fr.correctexam.service: minio
  name: minio
  namespace: correctexam # Change this value to match the namespace metadata.name
spec:
  containers:
  - name: minio
    image: quay.io/minio/minio:latest
    resources: {}
    command:
    - /bin/bash
    - -c
    args:
    - minio server /data --console-address :9090
    volumeMounts:
    - mountPath: /data
      name: localvolume # Corresponds to the `spec.volumes` Persistent Volume
#  nodeSelector:
#    kubernetes.io/hostname: kubealpha.local # Specify a node label associated to the Worker Node on which you want to deploy the pod.
  volumes:
  - name: localvolume
    hostPath: # MinIO generally recommends using locally-attached volumes
      path: /data # Specify a path to a local drive or volume on the Kubernetes worker node
      type: DirectoryOrCreate # The path to the last directory must exist
---

apiVersion: v1
kind: Service
metadata:
  labels:
    fr.correctexam.service: minio
  name: minio
  namespace: correctexam

spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
    - name: "9000"
      port: 9000
      targetPort: 9000

  selector:
    fr.correctexam.service: minio
status:
  loadBalancer: {}
