src/main/docker/k8s/myadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.correctexam.service: myadmin
  name: myadmin
  namespace: correctexam
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    fr.correctexam.service: myadmin
status:
  loadBalancer: {}
